# Neural_Data_Science_project

./: .gitignore  README.md  environment.yml  matplotlib_style.txt  requirements.txt
jaxley-models/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
jaxley-models/jaxley_models/: __init__.py  __version__.py  utils.py
jaxley-models/jaxley_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jaxley-models/jaxley_models/ca1/: __init__.py  model.py
jaxley-models/jaxley_models/l5pc/: __init__.py  channels.py  model.py
jaxley-models/jaxley_models/pyloric/: __init__.py  channels.py  model.py  synapses.py
jaxley-models/tests/: __init__.py  pyloric_reference.py  test_ca1.py  test_l5pc.py  test_pyloric.py
notebooks/: build_notebook.py  explore_dataset.ipynb  gd_trajectories.npz  main.ipynb  main_test.ipynb  optimization_results.npz  original_nb_practical_04b.ipynb  original_nb_visual_coding.ipynb  snpe_data.npz  utils.py
notebooks/old_and_useless/: explore_dataset.ipynb
poster/: poster.tex
